--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,7 +19,7 @@
     "password": "nexenta",
     //"port": "22",
     
-    "remote_path": "/root/nexentastor-nfs/",
+    "remote_path": "/root/go/src/github.com/qeas/k8s-nexentastor-nfs/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
